tests/regression/errors/basic/type_error_11.csd
// Type error test 11
sus number drip = 11
sus text tea = "string_11"
sus wrong drip = text  // Type mismatch
vibez.spill("Type error 11:", wrong)
